Regression: Geometry Node: Radius input don't propageted on input curve for Set Curve Radius node #104223

Closed
opened 2023-01-29 23:26:58 +01:00 by Tom Benedett · 12 comments

System Information
Operating system: Windows 10
Graphics card: RTX 3090

Blender Version
Broken: version: 3.5.0 Alpha, branch: arcpatch-D16928, commit date: 2023-01-06 04:01, hash: c1003a5edf
Worked: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-04 23:36, hash: a7cc6e015c

Caused by 2ffd08e952

Simplified short description of error

The node does not propagate the radius input attribute.

Exact steps for others to reproduce the error
File example. If you open it, you will see that the attribute captured for the point does not propagate to curves.

Set Curve Radius missing field_on_all.blend

Possible fix

diff --git a/source/blender/nodes/geometry/nodes/node_geo_set_curve_radius.cc b/source/blender/nodes/geometry/nodes/node_geo_set_curve_radius.cc
index f03f5aa0413..1224ef5dfb6 100644
    - a/source/blender/nodes/geometry/nodes/node_geo_set_curve_radius.cc
+++ b/source/blender/nodes/geometry/nodes/node_geo_set_curve_radius.cc
@@ -13,7 +13,7 @@ static void node_declare(NodeDeclarationBuilder &b)

b.add_inputdecl::Float(N_("Radius"))
.min(0.0f)
.default_value(0.005f)

- .supports_field()
+      .field_on_all()
 .subtype(PROP_DISTANCE);

b.add_outputdecl::Geometry(N_("Curve")).propagate_all();

 }

##Original short description of error

Short description of error
The attached file presents a trunk-and-branches Geometry Nodes example where the radii of the points that are used for instancing are used to affect the properties of the (realized) instances. Expected behavior / behavior consistent with old files is shown in the first image:
{F14210541}
And the new behavior is shown in the second image. The value from the "capture attribute" on the points used for instancing is read by all the realized geometry as zero.
{F14210543}
This can be fixed with a "capture attribute" node put after the instancing/realization and before the "set radius" node.
{F14210553}
This problem does not apply to using the uncaptured value for "scale instances" on unrealized instances, nor does it apply to using the uncaptured value for an offset for "set position;" it appears isolated to "set radius" from what I can tell.

Exact steps for others to reproduce the error
See attached file.
{F14210536}

**System Information** Operating system: Windows 10 Graphics card: RTX 3090 **Blender Version** Broken: version: 3.5.0 Alpha, branch: arcpatch-[D16928](https://archive.blender.org/developer/D16928), commit date: 2023-01-06 04:01, hash: `c1003a5edf` Worked: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-04 23:36, hash: `a7cc6e015c` Caused by 2ffd08e952 ## Simplified short description of error The node does not propagate the radius input attribute. **Exact steps for others to reproduce the error** File example. If you open it, you will see that the attribute captured for the point does not propagate to curves. [Set Curve Radius missing field_on_all.blend](https://archive.blender.org/developer/F14211034/Set_Curve_Radius_missing_field_on_all.blend) **Possible fix** ```lang=Diff diff --git a/source/blender/nodes/geometry/nodes/node_geo_set_curve_radius.cc b/source/blender/nodes/geometry/nodes/node_geo_set_curve_radius.cc index f03f5aa0413..1224ef5dfb6 100644 - a/source/blender/nodes/geometry/nodes/node_geo_set_curve_radius.cc +++ b/source/blender/nodes/geometry/nodes/node_geo_set_curve_radius.cc @@ -13,7 +13,7 @@ static void node_declare(NodeDeclarationBuilder &b) ``` b.add_input<decl::Float>(N_("Radius")) .min(0.0f) .default_value(0.005f) ``` - .supports_field() + .field_on_all() ``` .subtype(PROP_DISTANCE); b.add_output<decl::Geometry>(N_("Curve")).propagate_all(); ``` } ``` ##Original short description of error **Short description of error** The attached file presents a trunk-and-branches Geometry Nodes example where the radii of the points that are used for instancing are used to affect the properties of the (realized) instances. Expected behavior / behavior consistent with old files is shown in the first image: {F14210541} And the new behavior is shown in the second image. The value from the "capture attribute" on the points used for instancing is read by all the realized geometry as zero. {F14210543} This can be fixed with a "capture attribute" node put after the instancing/realization and before the "set radius" node. {F14210553} This problem does not apply to using the uncaptured value for "scale instances" on unrealized instances, nor does it apply to using the uncaptured value for an offset for "set position;" it appears isolated to "set radius" from what I can tell. **Exact steps for others to reproduce the error** See attached file. {F14210536}
Author

Added subscriber: @moak

Added subscriber: @moak

#104312 was marked as duplicate of this issue

#104312 was marked as duplicate of this issue

Added subscriber: @mod_moder

Added subscriber: @mod_moder

will check...

will check...
Iliya Katushenock changed title from [Geometry Nodes] Regression: radius no longer propagates from points to realized instances to Regression: Geometry Node: Radius input don't propageted on input curve for Set Curve Radius node 2023-01-30 02:25:16 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
@JacquesLucke

Thank you for find and report this

Thank you for find and report this
Member

@mod_moder good catch, your fix looks good.

@mod_moder good catch, your fix looks good.

This issue was referenced by fdc81be213

This issue was referenced by fdc81be21310a5aa6eaf9f341795769b27a2205c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2023-02-02 17:05:16 +01:00

Added subscriber: @Dvorakir

Added subscriber: @Dvorakir
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104223
No description provided.